--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "java-lotto"]
 	path = java-lotto
 	url = https://github.com/seung7642/java-lotto.git
+[submodule "java-ladder"]
+	path = java-ladder
+	url = https://github.com/seung7642/java-ladder.git
