--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "java-ladder"]
 	path = java-ladder
 	url = https://github.com/seung7642/java-ladder.git
+[submodule "java-lms"]
+	path = java-lms
+	url = https://github.com/seung7642/java-lms.git
